ValkyrEngine: Adding middleware for the actual game window

--- a/src/ValkyrEngine/ValkyrEngine.csproj
+++ b/src/ValkyrEngine/ValkyrEngine.csproj
@@ -1,15 +1,17 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net7.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+   <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Arch" />
     <PackageReference Include="Silk.Net" />
+    <PackageReference Include="Silk.NET.Vulkan.Extensions.EXT" />
   </ItemGroup>
 
 </Project>
