--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -5,5 +5,6 @@
   <ItemGroup>
     <PackageVersion Include="Arch" Version="1.2.7" />
     <PackageVersion Include="Silk.Net" Version="2.18.0" />
+    <PackageVersion Include="Silk.NET.Vulkan.Extensions.EXT" Version="2.18.0" />
   </ItemGroup>
 </Project>
